--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">GithubSearchJavaPop</string>
-    <string name="internet">No internet connection, Please make sure your device is connected to the internet.</string>
+    <string name="whithout_connection">No internet connection, Please make sure your device is connected to the internet.</string>
     <string name="guithublink">GuithubLink</string>
     <string name="username">Username</string>
     <string name="github_profile_link">Github Profile Link</string>
